# deepsketch-fast2022

./: .gitignore  compress.h  note
NGT/: Common.h
bruteforce/: bf_xdelta3_all.cpp
clustering/: coarse  coarse_xdelta3.cpp  fine_xdelta3.cpp  writeTest  writeTest.cpp
clustering/results/: modifyBlocks.py
deepsketch/: CMakeLists.txt  deepsketch.h  deepsketch_comp.cpp  fineANN.cpp  fineANN.h  note  result
deepsketch/utils/: mk_version_defs_h.sh
finesse/: finesse.h  finesse_comp.cpp
training/: model_converter_gh.py  train_baseline.py  train_hashlayer_gh.py
xdelta3/: xdelta3.h
xdelta3/autom4te.cache/: output.0t  traces.0t
